feat: 项目初始化

--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "sit": "vue-cli-service build --mode sit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "moment": "^2.24.0",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.17.0"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.5.0",
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "husky": "^4.2.5",
+    "image-webpack-loader": "^6.0.0",
+    "lint-staged": "^10.1.3",
+    "validate-commit-msg": "^2.14.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack-bundle-analyzer": "^3.7.0",
+    "yaml-loader": "^0.6.0",
+    "yarn": "1.22.4"
   },
   "eslintConfig": {
     "root": true,
@@ -34,9 +46,24 @@
     },
     "rules": {}
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg",
+      "pre-commit": "lint-staged",
+      "pre-push": "cross-env NODE_ENV=production npm run lint"
+    }
+  },
+  "lint-staged": {
+    "*.{js,vue}": "cross-env NODE_ENV=production npm run lint"
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
